package ar.edu.uba.fi.conherencia;

public interface Vehiculo {
    Double alquilarPor(int cantidadDias);
}
